:watch: Communication between watch app and iphone app

--- a/Toggl.Daneel.WatchExtension/Toggl.Daneel.WatchExtension.csproj
+++ b/Toggl.Daneel.WatchExtension/Toggl.Daneel.WatchExtension.csproj
@@ -113,6 +113,7 @@
     <Compile Include="NotificationController.designer.cs">
       <DependentUpon>NotificationController.cs</DependentUpon>
     </Compile>
+    <Compile Include="WatchSessionHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="PushNotificationPayload.json" />
