--- a/Toggl.Daneel/Toggl.Daneel.csproj
+++ b/Toggl.Daneel/Toggl.Daneel.csproj
@@ -558,6 +558,8 @@
     <ImageAsset Include="Resources\Images.xcassets\icCalendarSmall.imageset\icCalendarSmall%403x.png" />
     <ImageAsset Include="Resources\Images.xcassets\togglLogoWithoutTextRed.imageset\Contents.json" />
     <ImageAsset Include="Resources\Images.xcassets\togglLogoWithoutTextRed.imageset\togglLogoRed.pdf" />
+    <ImageAsset Include="Resources\Images.xcassets\togglLogoWithText.imageset\Contents.json" />
+    <ImageAsset Include="Resources\Images.xcassets\togglLogoWithText.imageset\Toggl-logo.pdf" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
@@ -640,6 +642,7 @@
     <InterfaceDefinition Include="Cells\Settings\UpcomingEventsOptionCell.xib" />
     <InterfaceDefinition Include="ViewControllers\SelectDefaultWorkspaceViewController.xib" />
     <InterfaceDefinition Include="Cells\SelectDefaultWorkspaceTableViewCell.xib" />
+    <InterfaceDefinition Include="ViewControllers\UserAccess\SignupOrLoginChoiceViewController.xib" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -1169,6 +1172,10 @@
       <DependentUpon>SelectDefaultWorkspaceTableViewCell.cs</DependentUpon>
     </Compile>
     <Compile Include="Extensions\IThreadSafeTimeEntryExtensions.cs" />
+    <Compile Include="ViewControllers\UserAccess\SignupOrLoginChoiceViewController.cs" />
+    <Compile Include="ViewControllers\UserAccess\SignupOrLoginChoiceViewController.designer.cs">
+      <DependentUpon>SignupOrLoginChoiceViewController.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Toggl.Foundation.MvvmCross\Toggl.Foundation.MvvmCross.csproj">
@@ -1253,6 +1260,7 @@
     <Folder Include="ViewControllers\Calendar\" />
     <Folder Include="Cells\Calendar\" />
     <Folder Include="Resources\Images.xcassets\icCalendarSmall.imageset\" />
+    <Folder Include="ViewControllers\UserAccess\" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="GoogleService-Info.plist" />
