:sparkles: Separate asking for google data from actual sign up process (#4036)
* :sparkles: Separate asking for google data from actual sign up process

* :fire: Remove temp line

* :green_heart: Fix build

--- a/Toggl.Giskard/Toggl.Giskard.csproj
+++ b/Toggl.Giskard/Toggl.Giskard.csproj
@@ -509,6 +509,7 @@
     <Compile Include="Activities\SignupOrLoginChoiceActivity.ViewBinds.cs">
       <DependentUpon>SignupOrLoginChoiceActivity.cs</DependentUpon>
     </Compile>
+    <Compile Include="Services\IntentResultRequestCodes.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\AndroidManifest.xml" />
