--- a/Toggl.Giskard/Toggl.Giskard.csproj
+++ b/Toggl.Giskard/Toggl.Giskard.csproj
@@ -510,6 +510,7 @@
     <Compile Include="Activities\SignupOrLoginChoiceActivity.ViewBinds.cs">
       <DependentUpon>SignupOrLoginChoiceActivity.cs</DependentUpon>
     </Compile>
+    <Compile Include="Services\IntentResultRequestCodes.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\AndroidManifest.xml" />
