--- a/Toggl.Foundation/Toggl.Foundation.csproj
+++ b/Toggl.Foundation/Toggl.Foundation.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
+    <PackageReference Include="Accord.MachineLearning" Version="3.8.0" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Conversions\DayOfWeekToString.config" />
