:construction: Forgot Password UI update (#4062)
## What's this?
Implements the new workflow for forgot password screen.

### Relationships
Implements part of #3969 

## Why do we want this?
To make it simpler for users.

## How is it done?
Not much has changed in comparison to the old one.

### Side effects
Should be none.

## Review hints
If you are testing the app functionally, know that multiple requests with the same email in short timespan will result in an error that we can't differentiate from unknown/email error, so expect a confusing message there. Until we solve the JSON ERROR API issues accross clients/BE, there's nothing we can do here.

## :squid: Permissions
🔑  people.

--- a/Toggl.Giskard/Toggl.Giskard.csproj
+++ b/Toggl.Giskard/Toggl.Giskard.csproj
@@ -15,7 +15,6 @@
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
-    <AndroidUseLatestPlatformSdk>true</AndroidUseLatestPlatformSdk>
     <AndroidLinkMode>Full</AndroidLinkMode>
     <AndroidLinkSkip>Toggl.Giskard</AndroidLinkSkip>
     <EnableProguard>true</EnableProguard>
@@ -511,6 +510,7 @@
       <DependentUpon>SignupOrLoginChoiceActivity.cs</DependentUpon>
     </Compile>
     <Compile Include="Services\IntentResultRequestCodes.cs" />
+    <Compile Include="Extensions\Reactive\TextInputLayoutWithHelperTextExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\AndroidManifest.xml" />
