--- a/Toggl.Daneel/Toggl.Daneel.csproj
+++ b/Toggl.Daneel/Toggl.Daneel.csproj
@@ -647,6 +647,9 @@
     <InterfaceDefinition Include="Cells\Settings\UpcomingEventsOptionCell.xib" />
     <InterfaceDefinition Include="ViewControllers\SelectDefaultWorkspaceViewController.xib" />
     <InterfaceDefinition Include="Cells\SelectDefaultWorkspaceTableViewCell.xib" />
+    <InterfaceDefinition Include="Views\StartTimeEntry\ReactiveProjectSuggestionViewCell.xib" />
+    <InterfaceDefinition Include="Views\StartTimeEntry\ReactiveWorkspaceHeaderViewCell.xib" />
+    <InterfaceDefinition Include="Views\StartTimeEntry\ReactiveTaskSuggestionViewCell.xib" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -710,7 +713,7 @@
     <Compile Include="ViewSources\Generic\ListTableViewSource.cs" />
     <Compile Include="ViewSources\Generic\ReactiveSectionedListTableViewSource.cs" />
     <Compile Include="ViewSources\Generic\SectionedListTableViewSource.cs" />
-    <Compile Include="ViewSources\SelectProjectTableViewSource.cs" />
+    <Compile Include="ViewSources\SelectProjectTableViewSourceOld.cs" />
     <Compile Include="Binding\TextFieldSecureTextEntryTargetBinding.cs" />
     <Compile Include="Binding\BarButtonAnimatedEnabledTargetBinding.cs" />
     <Compile Include="Binding\TextFieldFocusTargetBinding.cs" />
@@ -1179,6 +1182,19 @@
     <Compile Include="PlatformInfoIos.cs" />
     <Compile Include="Services\BackgroundSyncServiceIos.cs" />
     <Compile Include="Extensions\TimeSpanExtensions.cs" />
+    <Compile Include="Views\StartTimeEntry\ReactiveProjectSuggestionViewCell.cs" />
+    <Compile Include="Views\StartTimeEntry\ReactiveProjectSuggestionViewCell.designer.cs">
+      <DependentUpon>ReactiveProjectSuggestionViewCell.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ViewSources\SelectProjectTableViewSource.cs" />
+    <Compile Include="Views\StartTimeEntry\ReactiveWorkspaceHeaderViewCell.cs" />
+    <Compile Include="Views\StartTimeEntry\ReactiveWorkspaceHeaderViewCell.designer.cs">
+      <DependentUpon>ReactiveWorkspaceHeaderViewCell.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\StartTimeEntry\ReactiveTaskSuggestionViewCell.cs" />
+    <Compile Include="Views\StartTimeEntry\ReactiveTaskSuggestionViewCell.designer.cs">
+      <DependentUpon>ReactiveTaskSuggestionViewCell.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Toggl.Foundation.MvvmCross\Toggl.Foundation.MvvmCross.csproj">
