--- a/Toggl.Giskard/Toggl.Giskard.csproj
+++ b/Toggl.Giskard/Toggl.Giskard.csproj
@@ -371,8 +371,8 @@
     <Compile Include="Activities\SelectProjectActivity.cs" />
     <Compile Include="Adapters\SelectProjectRecyclerAdapter.cs" />
     <Compile Include="Extensions\FloatingActionButtonExtensions.cs" />
-    <Compile Include="Fragments\Pomodoro\PomodoroListingFragment.cs" />
-    <Compile Include="Fragments\Pomodoro\PomodoroListingFragment.ViewBinds.cs">
+    <Compile Include="Fragments\PomodoroListingFragment.cs" />
+    <Compile Include="Fragments\PomodoroListingFragment.ViewBinds.cs">
       <DependentUpon>PomodoroListingFragment.cs</DependentUpon>
     </Compile>
     <Compile Include="ViewHolders\StartTimeEntry\SuggestionRecyclerViewHolder.cs" />
