--- a/Toggl.Daneel.ShareExtension/Toggl.Daneel.ShareExtension.csproj
+++ b/Toggl.Daneel.ShareExtension/Toggl.Daneel.ShareExtension.csproj
@@ -113,6 +113,14 @@
       <Project>{aca2821e-0ff9-4036-bff6-e775bb4e6732}</Project>
       <Name>Toggl.Daneel.ExtensionKit</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Toggl.Multivac\Toggl.Multivac.csproj">
+      <Project>{6af7be5e-af9d-4ea7-af7f-28d07b8def24}</Project>
+      <Name>Toggl.Multivac</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Toggl.Ultrawave\Toggl.Ultrawave.csproj">
+      <Project>{5aceb155-9dd4-4309-bcc9-997a09950393}</Project>
+      <Name>Toggl.Ultrawave</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.AppExtension.CSharp.targets" />
 </Project>
