✨ Add initial UI for editor

--- a/Toggl.Giskard/Toggl.Giskard.csproj
+++ b/Toggl.Giskard/Toggl.Giskard.csproj
@@ -335,6 +335,10 @@
     <Compile Include="Activities\EditDurationActivity.ViewBinds.cs">
       <DependentUpon>EditDurationActivity.cs</DependentUpon>
     </Compile>
+    <Compile Include="Activities\PomodoroEditWorkflowActivity.cs" />
+    <Compile Include="Activities\PomodoroEditWorkflowActivity.ViewBinds.cs">
+      <DependentUpon>PomodoroEditWorkflowActivity.cs</DependentUpon>
+    </Compile>
     <Compile Include="Activities\EditTimeEntryActivity.Onboarding.cs" />
     <Compile Include="Activities\ForgotPasswordActivity.cs" />
     <Compile Include="Activities\ForgotPasswordActivity.ViewBinds.cs">
@@ -1148,6 +1152,12 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\PomodoroListingWorkflowCell.axml">
+      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\PomodoroEditWorkflowActivity.axml">
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
       <SubType>Designer</SubType>
     </AndroidResource>
